--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <header>
 
-<img src="Images/Photo on 8-31-22 at 2.43 PM.jpg" width ="500" height="500">
+<img src="Images/Photo on 8-31-22 at 2.43 PM.jpg" width ="500px" height="500px">
 
 <h1>Austin Garrett</h1>
 
