--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <header>
 
-<img src="Images/Photo on 8-31-22 at 2.43 PM.jpg" width ="500px" height="500px" alt="picture of Austin Garrett">
+<img src="Images/Photo on 8-31-22 at 2.43 PM.jpg" alt="picture of Austin Garrett">
 
-<img src="Images/PNG image.png" width ="500px" height="500px" alt="another picture of Austin Garrett">
+<img src="Images/PNG image.png" alt="another picture of Austin Garrett">
 
 <h1>Austin Garrett</h1>
 
