--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </header>
 
-<p>I am coming back to school to learn UX Design. Last semester I also took a class in programming and learned the basics of Python. I already have a degree in Marketing from Texas State University.</p>
+<p class="opening-statement">I am coming back to school to learn UX Design. Last semester I also took a class in programming and learned the basics of Python. I already have a degree in Marketing from Texas State University.</p>
 
 <p>In my spare time I like to ride bikes, read, play video games, and climb at Austin Bouldering Project. I currently work at the Apple Store Barton Creek as a Mac technician. I have a love for technology and want to learn more skills and meet new people that will help me grow in this sector.</p>
 
